complete some func for customer management UI

--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Spring Detailing | Quản lý đặt hẹn</title>
+    <title>Quản lý đặt hẹn | Spring Detailing</title>
   
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -117,8 +117,8 @@
                     <label>Tìm kiếm theo:</label>
                     <div class="form-group">
                       <select id="search-type-select" class="form-control select2bs4" style="width: 100%;" data-placeholder="Chọn tiêu chí tìm kiếm">
-                        <option value="booking-time" selected>Lịch hẹn</option>
-                        <option value="create-time">Thời gian tạo cuộc hẹn</option>
+                        <option value="booking-time">Lịch hẹn</option>
+                        <option value="create-time" selected>Thời gian tạo cuộc hẹn</option>
                       </select>
                     </div>
                   </div>
