--- a/src/main/resources/templates/customer-list.html
+++ b/src/main/resources/templates/customer-list.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Danh sách tùy chọn | Spring Detailing</title>
+  <title>Hồ sơ khách hàng | Spring Detailing</title>
 
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -30,10 +30,16 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="include/customize.css">
+  <link rel="stylesheet" href="/include/customize.css">
+  <style>
+    #data-table tr {
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed">
@@ -42,7 +48,7 @@
 
     <!-- Preloader -->
     <div class="preloader flex-column justify-content-center align-items-center">
-      <img class="animation__wobble" src="dist/img/SpringDetailingLogo.png" alt="SpringDetailingLogo" height="250"
+      <img class="animation__wobble" src="/dist/img/SpringDetailingLogo.png" alt="SpringDetailingLogo" height="250"
         width="250">
     </div>
 
@@ -58,7 +64,7 @@
     <!-- Main Sidebar Container -->
     <aside id="sidebar"  class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- AdminLTE App -->
-      <script src="dist/js/adminlte.js" defer></script>
+      <script src="/dist/js/adminlte.js" defer></script>
     </aside>
     <!-- Font Awesome --><!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -77,12 +83,12 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Danh sách option (tùy chọn)</h1>
+              <h1>Hồ sơ khách hàng</h1>
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="#" class="text-dark">Quản lý danh mục</a></li>
-                <li class="breadcrumb-item active">Danh sách option</li>
+                <li class="breadcrumb-item"><a href="#" class="text-dark">Trang chủ</a></li>
+                <li class="breadcrumb-item active">Hồ sơ khách hàng</li>
               </ol>
             </div>
           </div>
@@ -98,18 +104,16 @@
 
             <div id="data-table-card" class="card">
               <div class="card-header d-flex align-items-center">
-                <h3 class="card-title">Bảng danh sách tùy chọn dịch vụ</h3>
-                
-                <button class="btn btn-success btn-sm ms-auto ml-2" id="new-option-btn">
-                  <i class="fa-solid fa-plus mr-1"></i> Thêm option
+                <h3 class="card-title">Bảng danh sách khách hàng</h3>
+                <button class="btn btn-success btn-sm ms-auto ml-2" id="new-user-btn">
+                  <i class="fa-solid fa-user-plus mr-1"></i> Hồ sơ mới
                 </button>
-                <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="editBrand_btn">
-                  <i class="fa-solid fa-pencil mr-1"></i> Sửa tên hãng
-                </button> -->
-                
-                <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="newModel_btn">
-                  <i class="fa-solid fa-car-side mr-1"></i> Thêm mẫu
-                </button> -->
+                <button class="btn btn-info btn-sm ms-auto ml-2" id="reset-password-btn" disabled>
+                  <i class="fa-solid fa-pencil mr-1"></i> Đặt lại mật khẩu
+                </button>
+                <button class="btn btn-warning btn-sm ms-auto ml-2" id="car-mapping-btn" disabled>
+                  <i class="fa-solid fa-key mr-1"></i> Đăng ký sở hữu
+                </button>
                 <div class="ml-auto card-tools">
                   <button id="tableCollapseBtn" type="button" class="btn btn-tool" data-card-widget="collapse"
                     title="Collapse">
@@ -119,14 +123,30 @@
               </div>
               <!-- /.card-header -->
               <div class="card-body">
+                <div class="row mb-3">
+                  <div class="col-12 col-md-4 mt-2 mt-md-0">
+                    <label>Lọc theo trạng thái</label>
+                    <select
+                      id="status-filter"
+                      class="form-control select2" data-placeholder="Chọn trạng thái">
+                      <option selected value="all">Tất cả</option>
+                      <option value="-1">Bị cấm</option>
+                      <option value="0">Chưa xác thực</option>
+                      <option value="1">Đang hoạt động</option>
+                    </select>
+                  </div>
+                </div>
+
                 <table id="data-table" class="table table-bordered table-striped">
                   <thead>
                     <tr>
                       <th scope="col" style="text-align: center" width="4%">#</th>
-                      <th scope="col" style="text-align: center" min-width="20%">Option</th>
-                      <th scope="col" style="text-align: center" min-width="40%">Các dịch vụ sử dụng</th>
-                      <th scope="col" style="text-align: center" width="10%">Trạng thái</th>
-                      <th scope="col" style="text-align: center" max-width="14%">Thao tác</th>
+                      <th scope="col" style="text-align: center" width="30%">Họ tên</th>
+                      <th scope="col" style="text-align: center" width="9%">Xe</th>
+                      <th scope="col" style="text-align: center">Tài khoản</th>
+                      <th scope="col" style="text-align: center" width="12%">Vai trò</th>
+                      <th scope="col" style="text-align: center" width="8%">Trạng thái</th>
+                      <th scope="col" style="text-align: center" width="14%">Thao tác</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -168,12 +188,13 @@
   </div>
   <!-- ./wrapper -->
 
-
     <!-- Select2 JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/i18n/vi.js"></script>
   <!-- Bootstrap 4 -->
   <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom Input -->
+   <script src="/plugins/bs-custom-file-input/bs-custom-file-input.js"></script>
   <!-- DataTables  & Plugins -->
   <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
   <script src="/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
@@ -203,7 +224,7 @@
 
   <!-- AdminLTE for demo purposes -->
   <script src="/dist/js/demo.js"></script>
-  <script type="module" src="dist/js/pages/option-list.js"></script>
+  <script type="module" src="/dist/js/pages/customer-list.js"></script>
 </body>
 
 </html>
