--- a/src/main/resources/templates/provisional-invoice-print.html
+++ b/src/main/resources/templates/provisional-invoice-print.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spring Detailing | In tạm tính</title>
+  <title>Print | Spring Detailing</title>
 
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
