--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -223,7 +223,7 @@
 
   <!-- AdminLTE for demo purposes -->
   <script src="/dist/js/demo.js"></script>
-  <script type="module" src="dist/js/pages/user-list.js"></script>
+  <script type="module" src="/dist/js/pages/user-list.js"></script>
 </body>
 
 </html>
