--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Spring Detailing | Đăng nhập</title>
+    <title>Đăng nhập | Spring Detailing</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Google Font: Source Sans Pro -->
