Try telegram communication with a public key

--- a/src/main/resources/templates/OTPMailTemplate.html
+++ b/src/main/resources/templates/OTPMailTemplate.html
@@ -6,7 +6,7 @@
     <meta name="x-apple-disable-message-reformatting">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="telephone=no" name="format-detection">
-    <title>New email template 2024-08-06</title><!--[if (mso 16)]>
+    <title>Xác nhận email</title><!--[if (mso 16)]>
     <style type="text/css">
         a {text-decoration: none;}
     </style>
@@ -17,7 +17,7 @@
             <o:PixelsPerInch>96</o:PixelsPerInch>
         </o:OfficeDocumentSettings>
     </xml>
-    <![endif]--><!--[if !mso]><!-- -->
+    <![endif]--><!--[if !mso]> -->
     <link href="https://fonts.googleapis.com/css2?family=Imprima&display=swap" rel="stylesheet"><!--<![endif]-->
     <style type="text/css">
         .rollover:hover .rollover-first {
@@ -101,7 +101,7 @@
                                                 <td align="center" valign="top" style="padding:0;Margin:0;width:520px">
                                                     <table cellpadding="0" cellspacing="0" width="100%" bgcolor="#fafafa" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:separate;border-spacing:0px;background-color:#fafafa;border-radius:10px" role="presentation">
                                                         <tr>
-                                                            <td align="left" style="padding:20px;Margin:0"><h3 style="Margin:0;font-family:Imprima, Arial, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:28px;font-style:normal;font-weight:bold;line-height:34px;color:#2D3142">Welcome, <span th:text="${hoten}">HoTen</span></h3><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:27px;letter-spacing:0;color:#2D3142;font-size:18px"><br></p><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:27px;letter-spacing:0;color:#2D3142;font-size:18px">You're receiving this message because you recently signed up for an account.<br><br>Confirm your email address by enter OTP code below. This step adds extra security to your business by verifying you own this email.</p></td>
+                                                            <td align="left" style="padding:20px;Margin:0"><h3 style="Margin:0;font-family:Imprima, Arial, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:28px;font-style:normal;font-weight:bold;line-height:34px;color:#2D3142">Xin chào, <span th:text="${hoten}">user's name</span></h3><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:27px;letter-spacing:0;color:#2D3142;font-size:18px"><br></p><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:27px;letter-spacing:0;color:#2D3142;font-size:18px">Bạn vừa gửi yêu cầu xác thực email trên hệ thống chăm sóc ô tô <span th:text="${facilityName}"></span>.<br><br>Vui lòng xác nhận đây là email của bạn bằng cách nhập OTP bên dưới, bước này nhằm tăng tính bảo mật cho thông tin cá nhân của bạn.</p></td>
                                                         </tr>
                                                     </table></td>
                                             </tr>
@@ -140,7 +140,7 @@
                                                 <td align="center" valign="top" style="padding:0;Margin:0;width:520px">
                                                     <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                                         <tr>
-                                                            <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:27px;letter-spacing:0;color:#2D3142;font-size:18px">Thanks,<br><br>My Garage.</p></td>
+                                                            <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:27px;letter-spacing:0;color:#2D3142;font-size:18px">Xin cảm ơn,<br><br><span th:text="${facilityName}"></span>.</p></td>
                                                         </tr>
                                                         <tr>
                                                             <td align="center" style="padding:0;Margin:0;padding-top:40px;padding-bottom:20px;font-size:0">
@@ -183,7 +183,7 @@
                                                             <td align="center" valign="top" style="padding:0;Margin:0;width:453px">
                                                                 <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                                                                     <tr>
-                                                                        <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:24px;letter-spacing:0;color:#2D3142;font-size:16px">This code expire in 1 hours. If you have questions, <a target="_blank" href="https://viewstripo.email" style="mso-line-height-rule:exactly;text-decoration:underline;color:#2D3142;font-size:16px">we're here to help</a>. <strong>We are not able to help hehehehe</strong></p></td>
+                                                                        <td align="left" style="padding:0;Margin:0"><p style="Margin:0;mso-line-height-rule:exactly;font-family:Imprima, Arial, sans-serif;line-height:24px;letter-spacing:0;color:#2D3142;font-size:16px">Mã OTP này có hiệu lực trong 1 giờ.</p></td>
                                                                     </tr>
                                                                 </table></td>
                                                         </tr>
