--- a/src/main/resources/templates/customer-list.html
+++ b/src/main/resources/templates/customer-list.html
@@ -36,7 +36,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/include/customize.css">
   <style>
-    #data-table tr {
+    #data-table tr, #car-table tr {
       cursor: pointer;
     }
   </style>
@@ -112,7 +112,7 @@
                   <i class="fa-solid fa-pencil mr-1"></i> Đặt lại mật khẩu
                 </button>
                 <button class="btn btn-warning btn-sm ms-auto ml-2" id="car-mapping-btn" disabled>
-                  <i class="fa-solid fa-key mr-1"></i> Đăng ký sở hữu
+                  <i class="fa-solid fa-key mr-1"></i> Quản lý xe
                 </button>
                 <div class="ml-auto card-tools">
                   <button id="tableCollapseBtn" type="button" class="btn btn-tool" data-card-widget="collapse"
