--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -194,6 +194,13 @@
           </ul>
         </li>
 
+        <li class="nav-item" data-id="STATISTICS" hidden>
+          <a href="/history-statistics.html" class="nav-link" id="history-statistics">
+            <i class="nav-icon fa-solid fa-chart-line"></i>
+            <p>Thống kê đơn dịch vụ</p>
+          </a>
+        </li>
+
         <li class="nav-item" id="my-profile-nav" hidden>
           <a href="/my-profile.html" class="nav-link" id="my-profile">
             <i class="nav-icon fa-regular fa-address-card"></i>
