--- a/src/main/resources/templates/my-profile.html
+++ b/src/main/resources/templates/my-profile.html
@@ -109,7 +109,7 @@
                   
                 </ul>
 
-                <a id="edit-btn" role="button" class="btn btn-primary btn-block"><b>Chỉnh sửa</b></a>
+                <a id="change-password-btn" role="button" class="btn btn-primary btn-block"><b>Đổi mật khẩu</b></a>
               </div>
               <!-- /.card-body -->
             </div>
@@ -240,6 +240,11 @@
         <!-- /.row -->
       </div><!-- /.container-fluid -->
 
+      <div id="modal-card"></div>
+      <script>
+        $("#modal-card").load("/include/modal.html")
+      </script>
+      
     </section>
     <!-- /.content -->
   </div>
