--- a/src/main/resources/templates/service-history.html
+++ b/src/main/resources/templates/service-history.html
@@ -185,7 +185,7 @@
                     <textarea wrap="soft" 
                       class="form-control" 
                       id="description-input" 
-                      rows="3" maxlength="1000" 
+                      rows="5" maxlength="1000" 
                       placeholder="Mô tả chi tiết"></textarea>
                   </div>
                 </div>
@@ -214,14 +214,14 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-12">
-                  <table id="data-table" class="table table-bordered table-striped">
+                  <table id="data-table" class="table table-bordered table-striped table-hover">
                     <thead>
                       <tr>
                         <th scope="col" style="text-align: center" width="5%">#</th>
                         <th scope="col" style="text-align: center" min-width="40%">Thời gian</th>
-                        <th scope="col" style="text-align: center" width="10%">Odo</th>
+                        <th scope="col" style="text-align: center" width="12%">Odo</th>
                         <th scope="col" style="text-align: center" width="20%">Trạng thái</th>
-                        <th scope="col" style="text-align: center" width="25%">Số tiền</th>
+                        <th scope="col" style="text-align: center" width="20%">Số tiền</th>
                       </tr>
                     </thead>
                     <tbody></tbody>
