--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -116,7 +116,7 @@
               <div class="card-body">
                 <div class="row mb-3">
                   <div class="col-12 col-md-4">
-                    <label>Lọc theo vai trò</label>
+                    <label>Lọc theo tùy chọn</label>
                     <select
                       id="role-filter"
                       class="form-control select2" data-placeholder="Chọn vai trò">
