--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,12 +21,54 @@
       rel="stylesheet"
       href="plugins/icheck-bootstrap/icheck-bootstrap.min.css"
     />
+    <!-- jQuery -->
+    <script src="plugins/jquery/jquery.min.js"></script>
+    <!-- Toastr -->
+    <link rel="stylesheet" href="/plugins/toastr/toastr.min.css">
+    <link rel="stylesheet" href="/dist/css/pages/OTP-verification.css" />
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/adminlte.min.css" />
   <link rel="stylesheet" href="/include/customize.css">
   </head>
 
   <body class="hold-transition login-page">
+
+    <div id="OTP-box" class="modal fade modal-custom" tabindex="-1" role="dialog" data-backdrop="static">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content d-flex justify-content-center align-items-center">
+          <div class="card p-2 text-center">
+            <h6>Vui lòng nhập mã OTP<br> để xác thực email của bạn</h6>
+            <div>
+              <span>Một OTP đã được gửi đến</span>
+              <p id="email-sent" class="font-italic">example@gmail.com</p>
+            </div>
+            <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2">
+              <input class="m-2 text-center form-control rounded" type="text" id="first" maxlength="1" />
+              <input class="m-2 text-center form-control rounded" type="text" id="second" maxlength="1" />
+              <input class="m-2 text-center form-control rounded" type="text" id="third" maxlength="1" />
+              <input class="m-2 text-center form-control rounded" type="text" id="fourth" maxlength="1" />
+              <input class="m-2 text-center form-control rounded" type="text" id="fifth" maxlength="1" />
+              <input class="m-2 text-center form-control rounded" type="text" id="sixth" maxlength="1" />
+            </div>
+            <div class="mt-4">
+              <button id="validate-otp-btn" class="btn btn-primary px-4 validate">Xác nhận</button>
+            </div>
+          </div>
+          <div class="card-2 d-flex justify-content-center align-items-center">
+            <div class="content d-flex justify-content-center align-items-center">
+              <span>Tôi không nhận được OTP&nbsp;</span>
+              <a id="resent-btn" class="text-decoration-none ms-3 text-primary" role="button">Gửi lại(1/3)</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="modal-card"></div>
+    <script>
+      $("#modal-card").load("/include/modal.html")
+    </script>
+
     <div class="login-box">
       <!-- /.login-logo -->
       <div class="card card-outline card-primary">
@@ -37,9 +79,9 @@
           <!-- <p class="login-box-msg pb-1"><b>Your cars are mine</b></p> -->
         </div>
         <div class="card-body">
-          <form action="index3.html" method="post">
+          <form>
             <div class="input-group mb-3">
-              <input id="email"  class="form-control" placeholder="Email" />
+              <input id="email" class="form-control" placeholder="Email" />
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-envelope"></span>
@@ -80,7 +122,7 @@
             </a>
           </div> -->
           <p class="mb-1 pt-2">
-            <a href="forgot-password.html">Quên mật khẩu</a>
+            <a class="text-primary" id="forgot-password-btn" role="button">Quên mật khẩu</a>
           </p>
           <p class="mb-0">
             <a href="register.html" class="text-center">Đăng ký tài khoản</a>
@@ -92,14 +134,14 @@
     </div>
     <!-- /.login-box -->
 
-    <!-- jQuery -->
-    <script src="plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="dist/js/adminlte.min.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Toastr -->
+    <script src="/plugins/toastr/toastr.min.js"></script>
     <script type="module" src="dist/js/pages/login.js"></script>
   </body>
 </html>
