--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -85,13 +85,13 @@
               <input class="m-2 text-center form-control rounded" type="text" id="sixth" maxlength="1" />
             </div>
             <div class="mt-4">
-              <button id="validate-otp-btn" class="btn btn-danger px-4 validate">Xác nhận</button>
+              <button id="validate-otp-btn" class="btn btn-primary px-4 validate">Xác nhận</button>
             </div>
           </div>
           <div class="card-2 d-flex justify-content-center align-items-center">
             <div class="content d-flex justify-content-center align-items-center">
-              <span>Tôi không nhận được OTP</span>
-              <a href="javascript:void(0)" id="resent-btn" class="text-decoration-none ms-3">Gửi lại(1/3)</a>
+              <span>Tôi không nhận được OTP&nbsp;</span>
+              <a id="resent-btn" class="text-decoration-none ms-3 text-primary" role="button">Gửi lại(1/3)</a>
             </div>
           </div>
         </div>
