update permission authorization for all API, check constrain in business process

--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -57,7 +57,7 @@
           </a>
         </li>
 
-        <li class="nav-item" data-id="GET_ALL_USER" hidden>
+        <li class="nav-item" data-id="GET_ALL_CUSTOMER" hidden>
           <a href="/customer-list" class="nav-link" id="customer-list">
             <i class="nav-icon fa-solid fa-users-line"></i>
             <p>Hồ sơ khách hàng</p>
