Some minor adjustments

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -148,8 +148,8 @@
               <select
                 id="gender-select"
                 class="form-control custom-select select2 flex-fill"
+                data-placeholder="Giới tính"
               >
-                <option disabled selected>Giới tính</option>
                 <option value="1">Nam</option>
                 <option value="0">Nữ</option>
               </select>
@@ -276,7 +276,7 @@
     <!-- /.register-box -->
 
     <!-- jQuery -->
-    <script src="/plugins/jquery/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
