--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -104,7 +104,7 @@
                   <i class="fa-solid fa-plus mr-1"></i> Thêm xe
                 </button>
                 <button class="btn btn-info btn-sm ms-auto ml-2" id="user-mapping-btn">
-                  <i class="fa-solid fa-key mr-1"></i> Đăng ký sở hữu
+                  <i class="fa-solid fa-key mr-1"></i> Đăng ký quản lý
                 </button>
                 
                 <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="newModel_btn">
