--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -190,7 +190,16 @@
                 <p>Tham số chung</p>
               </a>
             </li>
-           
+            <li class="nav-item" data-id="GET_ALL_TELEGRAM_MESSAGE" hidden>
+              <a
+                href="/telegram-message"
+                class="nav-link"
+                id="system-management_telegram-message"
+              >
+              <i class="nav-icon fa-brands fa-telegram"></i>
+                <p>Thông báo Telegram</p>
+              </a>
+            </li>
           </ul>
         </li>
 
