--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -158,7 +158,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <div class="card">
+              <div class="card collapsed-card">
                 <div class="card-header">
                   <h5 class="card-title">Biểu đồ kinh doanh tuần</h5>
 
