--- a/src/main/resources/templates/telegram-message.html
+++ b/src/main/resources/templates/telegram-message.html
@@ -125,23 +125,14 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <div class="row mb-3">
-                  <div class="col-12 col-md-4">
-                    <label>Lọc theo tùy chọn</label>
-                    <select
-                      id="role-filter"
-                      class="form-control select2" data-placeholder="Chọn vai trò">
-                    </select>
-                  </div>
-
                   <div class="col-12 col-md-4 mt-2 mt-md-0">
                     <label>Lọc theo trạng thái</label>
                     <select
                       id="status-filter"
                       class="form-control select2" data-placeholder="Chọn trạng thái">
                       <option selected value="all">Tất cả</option>
-                      <option value="-1">Bị cấm</option>
-                      <option value="0">Chưa xác thực</option>
-                      <option value="1">Đang hoạt động</option>
+                      <option value="0">Bản nháp</option>
+                      <option value="1">Đã gửi</option>
                     </select>
                   </div>
                 </div>
