Integrated VNPAY successfully, complete send notification via Telegram

--- a/src/main/resources/templates/staff-service-reception.html
+++ b/src/main/resources/templates/staff-service-reception.html
@@ -467,7 +467,8 @@
                 </div>
                 
                 <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end">
-                  <button id="cancel-order-btn" type="button" class="btn btn-danger mr-md-2 mr-auto">
+                  <img id="vnpay-pay" role="button" src="/dist/img/VNPay.png" alt="VN Pay" style="height: 37.6px;" class="mr-md-2 mr-auto rounded img-thumbnail">
+                  <button id="cancel-order-btn" type="button" class="btn btn-danger mr-2">
                     <i class="fa-regular fa-rectangle-xmark"></i> Hủy đơn
                   </button>
                   <button id="confirm-order-btn" type="button" class="btn btn-success">
