--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -113,7 +113,7 @@
                 id="category-management_option-list"
               >
               <i class="nav-icon fa-solid fa-list-ol"></i>
-                <p>Danh mục option</p>
+                <p>Danh mục tùy chọn</p>
               </a>
             </li>
             <li class="nav-item" data-id="GET_ALL_SERVICES" hidden>
