--- a/src/main/resources/templates/provisional-invoice-print.html
+++ b/src/main/resources/templates/provisional-invoice-print.html
@@ -44,7 +44,7 @@
     <!-- info row -->
     <div class="row invoice-info">
       <div class="col-sm-4 invoice-col">
-        From
+        Công ty
         <address id="facility-info">
           <strong id="company-name">Company Name</strong><br>
           <span id="facility-address">Facility<br>
@@ -56,7 +56,7 @@
       </div>
       <!-- /.col -->
       <div class="col-sm-4 invoice-col">
-        To
+        Khách hàng
         <address id="customer-info">
           <strong><span id="customer-name">Khách vãng lai</span></strong><br>
           <span id="customer-address"><br></span>
