--- a/src/main/resources/templates/telegram-message.html
+++ b/src/main/resources/templates/telegram-message.html
@@ -108,9 +108,9 @@
 
             <div id="data-table-card" class="card">
               <div class="card-header d-flex align-items-center">
-                <h3 class="card-title">Danh sách tin nhắn</h3>
+                <h3 class="card-title">Danh sách thông báo</h3>
                 <button class="btn btn-success btn-sm ms-auto ml-2" id="new-message-btn">
-                  <i class="fa-regular fa-pen-to-square mr-1"></i> Tin nhắn mới
+                  <i class="fa-regular fa-pen-to-square mr-1"></i> Thông báo mới
                 </button>
                 <!-- <button class="btn btn-info btn-sm ms-auto ml-2" id="newModel_btn">
                   <i class="fa-solid fa-car-side mr-1"></i> Thêm mẫu
