--- a/src/main/resources/templates/common-parameter.html
+++ b/src/main/resources/templates/common-parameter.html
@@ -30,10 +30,17 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+  <!-- daterange picker -->
+  <link rel="stylesheet" href="/plugins/daterangepicker/daterangepicker.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/include/customize.css">
+  <style>
+    input.reservationtime {
+      font-size: 15px;
+    }
+  </style>
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed">
@@ -95,6 +102,96 @@
         <div class="container-fluid"></div>
         <div class="row">
           <div class="col-12">
+
+            <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">Quản lý ảnh dịch vụ và token hết hạn</h3>
+                <div class="card-tools">
+                  <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
+                    <i class="fas fa-minus"></i>
+                  </button>
+                </div>
+              </div>
+              <div class="card-body">
+                <div class="row">
+                  
+
+                  <div class="col-12 col-md-4 border-right-md px-md-3">
+                    <h4>Ảnh trước thi công:</h4>
+                    <div class="form-group">
+                      <label>Thời gian:</label>
+  
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="far fa-clock"></i></span>
+                        </div>
+                        <input role="button" type="text" class="form-control float-right bg-white reservationtime" readonly>
+                      </div>
+                      <!-- /.input group -->
+                    </div>
+                    <div class="d-flex justify-content-between w-100">
+                      <button id="pre-service-get-btn" class="btn btn-primary mr-2 w-100 get-info">
+                        Thống kê
+                      </button>
+                      <button id="pre-service-delete-btn" class="btn btn-danger ml-2 w-100 delete-images">
+                        Xóa
+                      </button>
+                    </div>
+                    <p class="mt-3 p-3 border rounded" id="pre-service-info">Không có thông tin</p>
+                  </div>
+
+                  <div class="col-12 col-md-4 border-right-md px-md-3">
+                    <h4>Ảnh sau thi công:</h4>
+                    <div class="form-group">
+                      <label>Thời gian:</label>
+  
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="far fa-clock"></i></span>
+                        </div>
+                        <input role="button" type="text" class="form-control float-right bg-white reservationtime" readonly>
+                      </div>
+                      <!-- /.input group -->
+                    </div>
+                    <div class="d-flex justify-content-between w-100">
+                      <button id="post-service-get-btn" class="btn btn-primary mr-2 w-100 get-info">
+                        Thống kê
+                      </button>
+                      <button id="post-service-delete-btn" class="btn btn-danger ml-2 w-100 delete-images">
+                        Xóa
+                      </button>
+                    </div>
+                    <p class="mt-3 p-3 border rounded" id="pre-service-info">Không có thông tin</p>
+                  </div>
+
+                  <div class="col-12 col-md-4 border-right-md px-md-3">
+                    <h4>Token hết hạn:</h4>
+                    <div class="form-group">
+                      <label>Thời gian:</label>
+  
+                      <div class="input-group">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text"><i class="far fa-clock"></i></span>
+                        </div>
+                        <input role="button" type="text" class="form-control float-right bg-white reservationtime" readonly>
+                      </div>
+                      <!-- /.input group -->
+                    </div>
+                    <div class="d-flex justify-content-between w-100">
+                      <button id="invalidated-token-get-btn" class="btn btn-primary mr-2 w-100">
+                        Thống kê
+                      </button>
+                      <button id="invalidated-token-delete-btn" class="btn btn-danger ml-2 w-100">
+                        Xóa
+                      </button>
+                    </div>
+                    <p class="mt-3 p-3 border rounded" id="pre-service-info">Không có thông tin</p>
+                  </div>
+  
+                  
+                </div>
+              </div>
+            </div>
 
             <div id="data-table-card" class="card">
               <div class="card-header d-flex align-items-center">
@@ -191,8 +288,10 @@
   <script src="plugins/jquery-mapael/maps/usa_states.min.js"></script>
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
+  <!-- date-range-picker -->
+  <script src="/plugins/moment/moment.min.js"></script>
+  <script src="/plugins/daterangepicker/daterangepicker.js"></script>
 
-  
   <!-- bs-custom-file-input -->
   <script src="/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
 
